# scurvy

./: CMakeLists.txt  meson.build  scurvy.conf
CMake/: FindLibvterm.cmake
include/: child.h  colors.h  config.h  log.h  pango.h  term.h  unicode.h
include/wayland/: buffer.h  registry.h  window.h
protocol/: meson.build
src/: child.c  colors.c  config.c  log.c  main.c  pango.c  term.c
src/wayland/: CMakeLists.txt  buffers.c  main.c  registry.c  window.c
